--- a/output/team.html
+++ b/output/team.html
@@ -25,14 +25,40 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">test</h2>
+        <h2 class="card-title">Molly</h2>
+        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 0987654</li>
+            <li class="list-group-item">Email: <a href="mailto:molly@gmail.com">molly@gmail.com</a></li>
+            <li class="list-group-item">Office number: 987098000</li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Mark</h2>
+        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 1234567</li>
+            <li class="list-group-item">Email: <a href="mailto:mark@hotmail.com">mark@hotmail.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/mark123" target="_blank" rel="noopener noreferrer">mark123</a></li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">John</h2>
         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: test</li>
-            <li class="list-group-item">Email: <a href="mailto:test@testing.com">test@testing.com</a></li>
-            <li class="list-group-item">School: test</li>
+            <li class="list-group-item">ID: 67890543</li>
+            <li class="list-group-item">Email: <a href="mailto:John@gmail.com">John@gmail.com</a></li>
+            <li class="list-group-item">School: University Of Toronto</li>
         </ul>
     </div>
 </div>
